--- a/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
+++ b/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
@@ -35,25 +35,32 @@
                         @if (Context.Session.GetInt32("UserId") != null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Map" asp-action="Index">Карта Минска</a>
+                                <a class="nav-link" asp-controller="PetAd" asp-action="Index">Мои объявления</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Map" asp-action="Discovery">Карта обнаружения</a>
+                                <a class="nav-link" asp-controller="PetAd" asp-action="OtherAds">Другие объявления</a>
                             </li>
                             <li class="nav-item">
-                                <span class="nav-link text-dark">Привет, @Context.Session.GetString("Username")!</span>
+                                <a class="nav-link" asp-controller="Favorite" asp-action="Index">
+                                    <i class="fas fa-star"></i> Избранное
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Выйти</a>
+                                <a class="nav-link" asp-controller="Account" asp-action="Profile">
+                                    <i class="fas fa-user"></i> Личный кабинет
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Account" asp-action="Logout">Выйти</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Войти</a>
+                                <a class="nav-link" asp-controller="Account" asp-action="Login">Войти</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a>
+                                <a class="nav-link" asp-controller="Account" asp-action="Register">Регистрация</a>
                             </li>
                         }
                     </ul>
