--- a/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
+++ b/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
@@ -30,16 +30,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PetAd" asp-action="OtherAds">Объявления других</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Map" asp-action="Discovery">Районы</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         @if (Context.Session.GetInt32("UserId") != null)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="PetAd" asp-action="Index">Мои объявления</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" asp-controller="PetAd" asp-action="OtherAds">Другие объявления</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Favorite" asp-action="Index">
                                     <i class="fas fa-star"></i> Избранное
