--- a/PetaFF/PetaFF/Views/PetAd/Details.cshtml
+++ b/PetaFF/PetaFF/Views/PetAd/Details.cshtml
@@ -82,6 +82,9 @@
                             }
                         </select>
                     </form>
+                    <a href="@Url.Action("Print", "PetAd", new { id = Model.Id })" target="_blank" class="btn btn-outline-secondary ms-2">
+                        <i class="fas fa-print"></i> Распечатать объявление
+                    </a>
                 </div>
             </div>
 
