--- a/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
+++ b/PetaFF/PetaFF/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Map" asp-action="Discovery">Районы</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Help" asp-action="Index">Помощь и волонтёры</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav">
                         @if (Context.Session.GetInt32("UserId") != null)
