--- a/PetaFF/PetaFF/Views/Help/Edit.cshtml
+++ b/PetaFF/PetaFF/Views/Help/Edit.cshtml
@@ -1,4 +1,4 @@
-@model PetaFF.Controllers.Volunteer
+@model PetaFF.Models.Volunteer
 @{
     ViewData["Title"] = "Редактировать заявку";
     var districts = new[] { "Центральный", "Советский", "Ленинский", "Фрунзенский", "Октябрьский", "Партизанский", "Московский", "Заводской" };
